src/app/home/header/search/search.component.scss
@import "../../../../styles";

.searchbar-wrapper {
    width: 100%;

    .searchbar-box {
        padding-left: 45px;
        padding-right: 45px;
        height: 70px;
        background-color: #fff;
        border-radius: 35px;
        display: flex;
        justify-content: space-between;
        align-items: center;
        position: relative;

        input {
            width: 100%;
            font-size: 24px;

            &::placeholder {
                color: $grey;
            }
        }

        .searchbar-icon {
            display: flex;
            justify-content: center;
            align-items: center;
            font-size: 35px;
            color: $grey;
            margin-right: -4px;
        }

        .search-results-container {
            position: absolute;
            z-index: 10;
            width: calc(100% - 70px);
            top: calc(100% - 16px);
            left: 45px;
            box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.2);
            background: white;
            border-radius: 0px 20px 20px 20px;
            display: flex;
            flex-direction: column;

            .search-results-title {
                font-size: 18px;
                font-weight: 700;
                margin: 0;
                padding: 6px 20px;
                background: $violet-bright;
                display: flex;
                align-items: center;
                gap: 10px;
                cursor: pointer;

                .arrow-icon {
                    margin-right: 2px;
                    transform: rotate(-90deg);
                }

                &:hover {
                    color: $purple-blue-bright;
                    background: #f0f2ff;
                }
            }

            .first-title {
                border-radius: 0px 20px 0px 0px;
            }

            .search-results-list {
                width: 100%;
                max-height: 218px;
                list-style-type: none;
                font-size: 21px;
                display: flex;
                flex-direction: column;
                gap: 10px;
                padding: 12px 20px;
                overflow-y: auto;
                @include scrollbar();
                @include transition(150ms);

                li {
                    width: 100%;
                    height: 58px;
                    min-height: 58px;
                    display: flex;
                    align-items: center;
                    border-radius: 30px;
                    padding: 8px 10px;
                    text-overflow: ellipsis;
                    white-space: nowrap;
                    cursor: pointer;
                    @include transition(75ms);

                    img {
                        margin-left: -5px;
                        margin-right: 15px;
                        width: 50px;
                        height: 50px;
                        border-radius: 100%;
                        object-fit: cover;
                    }

                    &:hover {
                        color: $purple-blue-bright;
                        background-color: $violet-bright;
                    }
                }

                .search-results-channel {
                    justify-content: space-between;
                }

                .search-results-post {
                    flex-direction: column;
                    justify-content: center;
                    align-items: flex-start;
                    gap: 0;

                    .top-line {
                        width: 100%;
                        display: flex;
                        gap: 12px;
                        overflow: hidden;
                        font-size: 20px;

                        .date {
                            font-size: 16px;
                            color: $grey;
                        }

                        .channel-name {
                            font-size: 16px;
                            color: $purple-blue-bright;
                            overflow: hidden;
                            text-overflow: ellipsis;
                            white-space: nowrap;
                        }
                    }

                    .bottom-line {
                        width: 100%;
                        font-size: 18px;
                        overflow: hidden;
                        text-overflow: ellipsis;
                        white-space: nowrap;
                    }

                    &:hover {
                        .top-line .date {
                            color: $purple-blue-bright;
                        }
                    }
                }
            }
        }

        .extended {
            .search-results-title .arrow-icon {
                transform: rotate(0deg);
            }

            .search-results-list {
                max-height: 654px;
            }
        }

        .collapsed {
            .search-results-title .arrow-icon {
                transform: rotate(180deg);
            }

            .search-results-list {
                max-height: 0px;
                padding: 0 20px;
            }
        }
    }
}

.in-navigation {
    display: none;

    .searchbar-box {
        border: 1px solid $purple-light;
        border-radius: 24px;
        height: 48px;
        padding: 8px 24px;

        input {
            font-size: 17px;
        }

        .searchbar-icon {
            font-size: 24px;
        }

        .search-results-container {
            width: 480px;
            max-width: calc(100vw - 85px);
            top: calc(100% - 9px);
            left: 24px;

            .search-results-title {
                font-size: 14px;
                padding: 5px 15px;
                gap: 8px;

                .arrow-icon {
                    margin-right: 0;
                }
            }

            .search-results-list {
                max-height: 114px;
                font-size: 17px;
                gap: 6px;
                padding: 6px 16px;

                li {
                    width: 100%;
                    height: 48px;
                    min-height: 48px;
                    border-radius: 24px;
                    padding: 6px 8px;

                    img {
                        margin-left: -4px;
                        margin-right: 12px;
                        width: 40px;
                        height: 40px;
                    }
                }

                .search-results-post {

                    .top-line {
                        width: 100%;
                        display: flex;
                        gap: 10px;
                        overflow: hidden;
                        font-size: 17px;

                        .date {
                            font-size: 13px;
                            color: $grey;
                        }

                        .channel-name {
                            font-size: 13px;
                        }
                    }

                    .bottom-line {
                        font-size: 14px;
                    }
                }
            }
        }

        .extended {
            .search-results-list {
                max-height: 342px;
            }
        }
        .collapsed {
            .search-results-list {
                max-height: 0px;
                padding: 0 20px;
            }
        }
    }
}

@media screen and (max-width: 900px) {
    .in-header {
        display: none;
    }

    .in-navigation {
        display: block;
    }
}

